--- a/order.njk
+++ b/order.njk
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<head>
-	<title>MealMobile</title>
-	<script src="client.js"></script>
-	<link rel="stylesheet" type="text/css" href="styles.css">
-</head>
+{% extends "templated_components/_skeleton.njk" %}
 
-<body onload="init()">
-{% include "templated_components/_header.njk" %}
+{% block initialize %}
+<script src="client.js"></script>
+{% endblock %}
+
+{% block body %}
 	<div id="searchbar" class="dropdown onFocus">
 		<input type="text" id="searchBox" placeholder="Search for Restaurants" onkeypress="updateDropdown()"/>
 		<div class="dropdownContent"></div>
@@ -51,5 +49,4 @@
 		</tbody>
 
 	</table>
-{% include "templated_components/_footer.njk" %}
-</body>
+{% endblock %}
