stats page now properly displays all info but fav menu item; moved responses obj in server.js to global scope;

--- a/templated_components/_skeleton.njk
+++ b/templated_components/_skeleton.njk
@@ -13,14 +13,15 @@
 <body onload="{{ body.onload | default("") }}">
 
 {% block header %}
-{% include "templated_components/_header.njk" %}
+    {% include "templated_components/_header.njk" %}
 {% endblock %}
 
 {% block body %}
+    <h2>{{ bodyText }}</h2>
 {% endblock %}
 
 {% block footer %}
-{% include "templated_components/_footer.njk" %}
+    {% include "templated_components/_footer.njk" %}
 {% endblock %}
 
 </body>
