--- a/order.njk
+++ b/order.njk
@@ -6,7 +6,7 @@
 
 {% block body %}
 	<div id="searchbar" class="dropdown onFocus">
-		<input type="text" id="searchBox" placeholder="Search for Restaurants" onkeypress="updateDropdown()"/>
+		<input type="text" id="searchBox" placeholder="Search for Restaurants"/>
 		<div class="dropdownContent"></div>
 	</div>
 	
