updated nunjucks templates; added express.static() middleware and moved static files into public; renamed client.js to order.js server now serves restaurant data properly; added restaurantNames.njk BROKEN: order submission in order_router.js;

--- a/views/order.njk
+++ b/views/order.njk
@@ -1,7 +1,8 @@
 {% extends "templated_components/_skeleton.njk" %}
+{% set title = "Place your Order" %}
 
 {% block initialize %}
-<script src="client.js"></script>
+<script src="scripts/order.js"></script>
 {% endblock %}
 
 {% block body %}
