server now serves pages for individual restaurants' info; added design changes to README.txt;

--- a/views/restaurantNames.njk
+++ b/views/restaurantNames.njk
@@ -1,4 +1,6 @@
 {% extends "templated_components/_skeleton.njk" %}
+{% set title = "Restaurants" %}
+
 {#
 Context:
     restaurantNames: [{id: int, name: String}, ...]
