--- a/views/templated_components/_header.njk
+++ b/views/templated_components/_header.njk
@@ -1,7 +1,7 @@
 <div id="header">
     <a href="/">Homepage</a>
-    <a href="order">Order Now</a>
-    <a href="stats">About</a>
-    <a href="restaurants">Restaurants</a>
-    <a href="addrestaurant">Add Restaurant</a>
+    <a href="/order">Order Now</a>
+    <a href="/stats">About</a>
+    <a href="/restaurants">Restaurants</a>
+    <a href="/addrestaurant">Add Restaurant</a>
 </div>
