restaurants can now be added through "/addrestaurant/" form;

--- a/views/order.njk
+++ b/views/order.njk
@@ -1,5 +1,6 @@
 {% extends "templated_components/_skeleton.njk" %}
 {% set title = "Place your Order" %}
+{% set onload = "init()" %}
 
 {% block initialize %}
 <script src="scripts/order.js"></script>
