--- a/views/templated_components/_skeleton.njk
+++ b/views/templated_components/_skeleton.njk
@@ -10,7 +10,7 @@
     {% block initialize %}
     {% endblock %}
 </head>
-<body onload="{{ body.onload | default("") }}">
+<body onload="{{ onload | default("") }}">
 
 {% block header %}
 {% include "templated_components/_header.njk" %}
