added error page; removed superfluous next() calls; updates README.txt; server now verifies new restaurants before adding them;

--- a/views/order.njk
+++ b/views/order.njk
@@ -4,6 +4,7 @@
 
 {% block initialize %}
 <script src="scripts/order.js"></script>
+<link rel="stylesheet" type="text/css" href="/stylesheets/order.css">
 {% endblock %}
 
 {% block body %}
