--- a/views/templated_components/_skeleton.njk
+++ b/views/templated_components/_skeleton.njk
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{ title | default("MealMobile") }}</title>
-    <link rel="stylesheet" type="text/css" href="stylesheets/styles.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/styles.css">
     {% block initialize %}
     {% endblock %}
 </head>
