added restaurant.js; began coding interactive restaurant.njk page;

--- a/views/addrestaurant.njk
+++ b/views/addrestaurant.njk
@@ -15,5 +15,5 @@
 
     <label for="min_order">Minimum Order:</label>
     <input type="number" id="min_order"><br>
-    <button value="Add" onclick="submit()"></button>
+    <button onclick="submit()">Submit</button>
 {% endblock %}
