--- a/views/templated_components/_header.njk
+++ b/views/templated_components/_header.njk
@@ -1,4 +1,4 @@
-<div id="header">
+<div id="header"> <!-- TODO: Update header -->
     <a href="/">Homepage</a>
     <a href="/order">Order Now</a>
     <a href="/stats">Stats</a>
