implemented jsonwebtoken sessions; added JWT token creation and authentication to auth.js; added more functionality to status.js; added icons through the google Material Icons Library; added a login page and a login form to index.njk; added password authentication to the login page; minor README.txt updates (Incomplete); renamed saltKey to secretKey; moved json, urlencoded and cookie parsing to server.js;

--- a/views/index.njk
+++ b/views/index.njk
@@ -1,5 +1,10 @@
 {% extends "templated_components/_skeleton.njk" %}
+{% set title = "Welcome to MealMobile" %}
 
 {% block body %}
 <h1>Welcome to MealMobile</h1>
+{% if not loggedIn %}
+    <hr>
+    {% include "templated_components/_userAuthForm.njk" %}
+{% endif %}
 {% endblock %}
