--- a/views/templated_components/_skeleton.njk
+++ b/views/templated_components/_skeleton.njk
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{ title | default("MealMobile") }}</title>
     <link rel="stylesheet" type="text/css" href="/stylesheets/styles.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     {% block initialize %}
     {% endblock %}
 </head>
