session token now automatically refreshes on page refresh; implemented logging out;

--- a/views/templated_components/_header.njk
+++ b/views/templated_components/_header.njk
@@ -1,10 +1,11 @@
+<script src="/scripts/_header.js"></script>
 <link rel="stylesheet" type="text/css" href="/stylesheets/dropdown.css">
 <link rel="stylesheet" type="text/css" href="/stylesheets/header.css">
 <div class="header"> <!-- TODO: Update header -->
 
     <div class="dropdown">
         <div class="dropdown-tile">
-            <a href="/"><i class="material-icons">home</i>Homepage</a>
+            <i class="material-icons">home</i><a href="/">Homepage</a>
         </div>
     </div>
 
@@ -26,14 +27,14 @@
         <div class="dropdown-tile">
             <i class="material-icons">account_box</i>
             {% if loggedIn %}
-            <a href="/profile">{{ user.name }}'s Profile</a>
+            <a href="/profile">{{ user.username }}'s Profile</a>
             {% else %}
             <a href="/login">Log In</a>
             {% endif %}
         </div>
         <div class="dropdown-content">
         {% if loggedIn %}
-            <a href="/logout">Log Out</a>
+            <a onclick="logout()">Log Out</a>
         {% else %}
             <a href="/register">Register</a>
         {% endif %}
