order.js minor fix; added label to #searchbox in order.njk;

--- a/views/order.njk
+++ b/views/order.njk
@@ -9,6 +9,7 @@
 
 {% block body %}
 <div id="searchbar" class="dropdown onFocus">
+    <label for="searchBox" style="display: none">Search Box</label>
     <input type="text" id="searchBox" placeholder="Search for Restaurants"/>
     <div class="dropdownContent"></div>
 </div>
