changed stats to work with individual order storage instead of aggregate data storage;

--- a/views/stats.njk
+++ b/views/stats.njk
@@ -8,7 +8,7 @@
     <h2>{{ restaurant.name }}</h2>
     <h3>Favorite Item: {{ restaurant.favItem }}</h3>
     <h3>Total Orders Submitted: {{ restaurant.orderCount }}</h3>
-    <h3>Average Order Cost: ${{ restaurant.avgOrder }}</h3>
+    <h3>Average Order Cost: ${{ restaurant.avgTotal }}</h3>
 {% else %}
     <h3>No Orders Submitted Yet</h3>
 {% endfor %}
