--- a/views/templated_components/_header.njk
+++ b/views/templated_components/_header.njk
@@ -1,4 +1,3 @@
-<script src="/scripts/_header.js"></script>
 <link rel="stylesheet" type="text/css" href="/stylesheets/dropdown.css">
 <link rel="stylesheet" type="text/css" href="/stylesheets/header.css">
 <div class="header">
@@ -34,7 +33,7 @@
         </div>
         <div class="dropdown-content">
         {% if loggedIn %}
-            <a onclick="logout()">Log Out</a>
+            <a href="/logout">Log Out</a>
         {% else %}
             <a href="/register">Register</a>
         {% endif %}
